[package]
name = "lsp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "0.8"
anyhow = "1.0.81"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
mockall = "0.10.2"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.2"
serde_json = "1.0"
