[package]
name = "lsp-client-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust client to talk to LSP servers."
license = "MIT" 
repository = "https://github.com/sudarshan-reddy/lsp-rs"
homepage = "https://github.com/sudarshan-reddy/lsp-rs" 
documentation = "https://docs.rs/lsp-rs" 
authors = ["Sudarsan Reddy <sudar.theone@gmail.com>"]
categories = ["development-tools", "ast", "lsp"] 
keywords = ["lsp", "ast", "dev-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "0.8"
anyhow = "1.0.81"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4.2"
serde_json = "1.0"
